fixed: gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,6 +66,7 @@ button {
 }
 
 .bg {
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -274,8 +275,8 @@ li {
 
 .pricing-value {
   font-size: 64px;
-  line-height: 1em;
   margin-bottom: 40px;
+  line-height: 1em;
 }
 .pricing-footer {
   text-align: center;
@@ -308,6 +309,7 @@ li {
 
 #page-news {
   padding-top: 100px;
+  line-height: 1;
 }
 #page-news h2 {
   margin-bottom: 48px;
@@ -328,10 +330,12 @@ li {
   margin-bottom: 30px;
   font-size: 30px;
   font-weight: 400;
+  line-height: 1.5;
 }
 .news-item p {
   margin-bottom: 24px;
   color: var(--color-gray);
+  line-height: 1.5;
 }
 .news-item > img {
   width: calc((100% - 50px) / 2);
@@ -361,10 +365,12 @@ li {
 }
 
 .btn-album {
+  display: inline-block;
   text-decoration: none;
   color: var(--color-gray);
   padding: 16px 30px;
   font-size: 12.8px;
+  line-height: 1.5;
 }
 
 #page-app {
@@ -382,7 +388,6 @@ li {
 
 .mobile-app {
   display: flex;
-  gap: 16px;
   flex-wrap: wrap-reverse;
   justify-content: space-between;
 }
@@ -410,7 +415,6 @@ footer {
 .footer-top {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
   gap: 30px;
   padding-top: 62px;
   padding-bottom: 72px;
@@ -424,10 +428,10 @@ footer {
 }
 .footer-top a {
   text-decoration: none;
-  color: var(--color-gray);
+  color: var(--color-artist);
 }
 .footer-top p {
-  color: var(--color-gray);
+  color: var(--color-artist);
 }
 .footer-top h3 {
   margin-bottom: 15px;
@@ -452,8 +456,7 @@ footer {
 }
 
 hr {
-  border: none;
-  border-top: 1px solid var(--color-gray);
+  border: 1px solid var(--color-gray);
 }
 
 .connection {
@@ -473,16 +476,6 @@ hr {
   width: 22px;
 }
 
-.facebook {
-  background-image: url(../images/Facebook.png);
-  width: 12px;
-}
-
-.instagram {
-  background-image: url(../images/Instagram.png);
-  width: 19px;
-}
-
 @media (max-width: 768px) {
   .navigation {
     display: block;
@@ -498,7 +491,7 @@ hr {
     font-weight: 700;
   }
   .logo {
-    margin-bottom: 17px;
+    margin-bottom: 16px;
   }
   .logo-name {
     font-weight: 700;
@@ -657,6 +650,7 @@ hr {
   display: flex;
   gap: 25px;
   flex-wrap: wrap;
+  line-height: 1;
 }
 .discography-item {
   margin-right: 25px;
@@ -667,9 +661,11 @@ hr {
   width: 100%;
   margin-bottom: 18px;
 }
+.discography-info {
+  line-height: 1.5;
+}
 .discography-info h3 {
   font-size: 18px;
-  line-height: 27px;
 }
 .discography-info p {
   color: var(--color-artist);
@@ -688,6 +684,7 @@ hr {
   display: flex;
   gap: 25px;
   flex-wrap: wrap;
+  line-height: 1;
 }
 .similar-item {
   margin-right: 25px;
@@ -698,6 +695,9 @@ hr {
   height: 250px;
   width: 100%;
   margin-bottom: 18px;
+}
+.similar-info {
+  line-height: 1.5;
 }
 .similar-info p {
   color: var(--color-artist);
