--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -66,6 +66,7 @@ button {
 }
 
 .bg {
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
