--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,8 +202,9 @@ background-image: url(../images/banner.png);
 .pricing {
     &-value {
         font-size: 64px;
-        line-height: 1em;
         margin-bottom: 40px;
+
+        line-height: 1em;
     }
 
     &-footer {
@@ -244,6 +245,7 @@ background-image: url(../images/banner.png);
 
 #page-news {
     padding-top: 100px;
+    line-height: 1;
 
     h2 {
         margin-bottom: 48px;
@@ -267,11 +269,13 @@ background-image: url(../images/banner.png);
             margin-bottom: 30px;
             font-size: 30px;
             font-weight: 400;
+            line-height: 1.5;
         }
 
         p {
             margin-bottom: 24px;
             color: var(--color-gray);
+            line-height: 1.5;
         }
 
         & > img {
@@ -309,11 +313,14 @@ background-image: url(../images/banner.png);
 }
 
 .btn-album {
+    display: inline-block;
     text-decoration: none;
     color: var(--color-gray);
     padding: 16px 30px;
 
     font-size: 12.8px;
+
+    line-height: 1.5;
 }
 
 
@@ -336,7 +343,6 @@ background-image: url(../images/banner.png);
 
 .mobile-app {
     display: flex;
-    gap: 16px;
     flex-wrap: wrap-reverse;
     justify-content: space-between;
 
@@ -373,7 +379,6 @@ footer {
     &-top {
         display: flex;
         flex-wrap: wrap;
-        justify-content: start;
         gap: 30px;
         padding-top: 62px;
         padding-bottom: 72px;
@@ -389,11 +394,11 @@ footer {
 
         a {
             text-decoration: none;
-            color: var(--color-gray);
+            color: var(--color-artist);
         }
 
         p {
-            color: var(--color-gray);
+            color: var(--color-artist);
         }
 
         h3 { 
@@ -425,8 +430,7 @@ footer {
 } 
 
 hr {
-    border: none;
-    border-top: 1px solid var(--color-gray);
+    border: 1px solid var(--color-gray);
 }
 
 .connection {
@@ -446,15 +450,15 @@ hr {
     width: 22px;
 }
 
-.facebook {
-    background-image: url(../images/Facebook.png);
-    width: 12px;
-}
+// .facebook {
+    //  background-image: url(../images/Facebook.png);
+    // width: 12px; 
+// }
 
-.instagram {
-    background-image: url(../images/Instagram.png);
-    width: 19px;
-}
+// .instagram {
+    // background-image: url(../images/Instagram.png);
+    // width: 19px;
+// }
 
 
 
@@ -479,7 +483,7 @@ hr {
     }
 
     .logo {
-        margin-bottom: 17px;
+        margin-bottom: 16px;
 
         &-name {
             font-weight: 700;
